# brewblox-usb-proxy

./: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  find_spark.py  find_spark_3.py  find_spark_4.py  find_usb_devices.py  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
brewblox_usb_proxy/: app_factory.py  connected_api.py  discovery.py  models.py  utils.py
src/: crow_all.h  discover.hpp  main.cpp  main_connect.cpp  main_discover.cpp
test/: conftest.py
